--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Kards</title>
+	<title>Girik Sur</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
