--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
+		         <a href="index.html">Girik</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -74,10 +74,10 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
+	   			<h1>I'm Girik Sur.</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
+	   				<span>Full Stack Developer</span>
 	   				<span>UI/UX Designer</span> 
 	   			</p>
 
@@ -113,7 +113,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead">I am a full stack developer and a student at the University of Waterloo</p>
    			</div>   			
 
    		</div>   		
@@ -124,28 +124,24 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>I work on both the front end and back end of web applications.</p>
 
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Juan Dela Cruz</span>
+   					<span>Girik Sur</span>
    				</li>
    				<li>
    					<strong>Birth Date:</strong>
-   					<span>September 28, 1987</span>
+   					<span>June 16, 2001</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>Freelancer, Frontend Developer</span>
-   				</li>
-   				<li>
-   					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
-   				</li>
+   					<span>Full Stack Developer</span>
+				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>me@kardswebsite.com</span>
+   					<span>girikification@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -155,7 +151,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>I have 2 years+ experience in most front end applications and <1 year experience in PHP as a backend programming language.</p>
 
 				<ul class="skill-bars">
 				   <li>
@@ -171,8 +167,13 @@
 				   	<strong>JQuery</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
+				   	<div class="progress percent75"><span>95%</span></div>
 				   	<strong>PHP</strong>
+				   </li>
+				   <li>
+
+				   	<div class="progress percent55"><span>75%</span></div>
+				   	<strong>Python</strong>
 				   </li>
 				   <li>
 
@@ -206,7 +207,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">I have worked on 3 projects concerning web development.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -303,12 +304,12 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<p>September 2019 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>University of Waterloo</h4>
+	   					<p>Candidate for Bachelor of Computing and Financial Management. Class of 2024</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -320,31 +321,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>High School</h3>
+	   					<p>September 2015 - June 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
-
-	   			</div> <!-- /timeline-block -->
-
-	   			<div class="timeline-block">
-
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
-
-	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>May 2013 - June 2014</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>White Oaks Secondary School, Oakville, ON</h4>
+	   					<p>Ontario Secondary School Diploma</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
