--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
          <li><a href="#"><i class="fa fa-behance"></i></a></li>
          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
@@ -113,7 +112,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am a full stack developer and a student at the University of Waterloo</p>
+   				<p class="lead">I am currently a student at the University of Waterloo enrolled in the Bachelor of Computing and FInancial Management program. I am interested in app development as well as Web app development.</p>
    			</div>   			
 
    		</div>   		
@@ -124,7 +123,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I work on both the front end and back end of web applications.</p>
+   			<p>I have 2+ year of experience is front end development and <1 year of experience in back end development. </p>
 
    			<ul class="info-list">
    				<li>
@@ -167,12 +166,12 @@
 				   	<strong>JQuery</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent75"><span>95%</span></div>
+				   	<div class="progress percent75"><span>75%</span></div>
 				   	<strong>PHP</strong>
 				   </li>
 				   <li>
 
-				   	<div class="progress percent55"><span>75%</span></div>
+				   	<div class="progress percent55"><span>55%</span></div>
 				   	<strong>Python</strong>
 				   </li>
 				   <li>
@@ -303,7 +302,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
+	   					<h3>Bachelor Degree</h3>
 	   					<p>September 2019 - Present</p>
 	   				</div>
 
@@ -351,7 +350,7 @@
    			<h5>Portfolio</h5>
    			<h1>Check Out Some of My Works.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Ecommerce website for tshirts, goodies and accessories.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
