--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
    		<div class="col-twelve resume-header">
 
-   			<h2>Work Experience</h2>
+   			<h2>Side Projects</h2>
 
    		</div> <!-- /resume-header -->
 
@@ -230,7 +230,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>UI Designer</h3>
+	   					<h3>ecommerce website </h3>
 	   					<p>July 2015 - Present</p>
 	   				</div>
 
