--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am currently a student at the University of Waterloo enrolled in the Bachelor of Computing and FInancial Management program. I am interested in app development as well as Web app development.</p>
+   				<p class="lead">I am currently a student at the University of Waterloo enrolled in the Bachelor of Computing and Financial Management program. I am interested in app development as well as Web app development.</p>
    			</div>   			
 
    		</div>   		
