--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
 
    	<ul class="intro-social">        
          <li><a href="https://www.facebook.com/girik.sur.1"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-	 <li><a href="#"><i class="fa fa-github"></i></a></li>
-         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/girik-s-174902134/"><i class="fa fa-linkedin"></i></a></li>
+	 <li><a href="https://github.com/girikification/giriksur"><i class="fa fa-github"></i></a></li>
+         <li><a href="https://twitter.com/girikification"><i class="fa fa-twitter"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -974,11 +973,10 @@
      		<div class="col-six tab-full pull-right social">
 
      			<ul class="footer-social">        
-			      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			      <li><a href="#"><i class="fa fa-github"></i></a></li>
-			      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+			      <li><a href="https://www.facebook.com/girik.sur.1"><i class="fa fa-facebook"></i></a></li>
+			      <li><a href="https://www.linkedin.com/in/girik-s-174902134/"><i class="fa fa-linkedin"></i></a></li>    
+			      <li><a href="https://github.com/girikification/giriksur"><i class="fa fa-github"></i></a></li>
+			      <li><a href="https://twitter.com/girikification"><i class="fa fa-twitter"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
