--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
    	<ul class="intro-social">        
          <li><a href="https://www.facebook.com/girik.sur.1"><i class="fa fa-facebook"></i></a></li>
          <li><a href="https://www.linkedin.com/in/girik-s-174902134/"><i class="fa fa-linkedin"></i></a></li>
-	 <li><a href="https://github.com/girikification/giriksur"><i class="fa fa-github"></i></a></li>
+	 <li><a href="https://github.com/girikification/"><i class="fa fa-github"></i></a></li>
          <li><a href="https://twitter.com/girikification"><i class="fa fa-twitter"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
@@ -111,7 +111,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am currently a student at the University of Waterloo enrolled in the Bachelor of Computing and Financial Management program. I am interested in app development as well as Web app development.</p>
+   				<p class="lead">I am currently a student at the University of Waterloo enrolled in the Bachelor of Computing and Financial Management program. I am interested in web and app development</p>
    			</div>   			
 
    		</div>   		
@@ -122,7 +122,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I have 2+ year of experience is front end development and <1 year of experience in back end development. </p>
+   			<p>I love playing badminton, tennis and video games. I also like to produce music as a hobby! My time around computers mainly involves around learning whatever I can and discover new and exciting things! </p>
 
    			<ul class="info-list">
    				<li>
@@ -205,7 +205,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">I have worked on 3 projects concerning web development.</p>
+   			<p class="lead">I have worked on 3 projects so far involving HTML, CSS, Javascript and Jquery.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -229,13 +229,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>ecommerce website </h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Ecommerce Website </h3>
+	   					<p>July 2018 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Awesome Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>www.isromerch.in</h4>
+	   					<p>The website was designed as a shop for clothes with ISRO branding and involved the usage of HTML, CSS, Javascript and Jquery. I also used PHP to set up the login interface however used the help of Shopify to maintain the payments gateway.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -975,7 +975,7 @@
      			<ul class="footer-social">        
 			      <li><a href="https://www.facebook.com/girik.sur.1"><i class="fa fa-facebook"></i></a></li>
 			      <li><a href="https://www.linkedin.com/in/girik-s-174902134/"><i class="fa fa-linkedin"></i></a></li>    
-			      <li><a href="https://github.com/girikification/giriksur"><i class="fa fa-github"></i></a></li>
+			      <li><a href="https://github.com/girikification"><i class="fa fa-github"></i></a></li>
 			      <li><a href="https://twitter.com/girikification"><i class="fa fa-twitter"></i></a></li>
 			   </ul> 
 	      		
