--- a/index.html
+++ b/index.html
@@ -248,12 +248,12 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<p>November 2017 - June 2018</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Super Cool Agency</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Chicspora </h4>
+	   					<p>Was part of a 3 member team that designed a website for women's clothes. I used HTML, CSS and Javascript for the client side of the website.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -265,13 +265,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>App Developer</h3>
+	   					<p>May 2017 - June 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Great Designs Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Algebraic Identities App</h4>
+	   					<p>Designed a basic android app using the Eclipse IDE with Java framework that displays algebraic identities and proofs along with examples. The app received 50+ downloads. </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -306,7 +306,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Waterloo</h4>
+	   					<h4>University of Waterloo, Waterloo, ON</h4>
 	   					<p>Candidate for Bachelor of Computing and Financial Management. Class of 2024</p>
 	   				</div>
 
@@ -349,7 +349,7 @@
    			<h5>Portfolio</h5>
    			<h1>Check Out Some of My Works.</h1>
 
-   			<p class="lead">Ecommerce website for tshirts, goodies and accessories.</p>
+   			<p class="lead">Web Development (currently live)</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -363,13 +363,13 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/liberty.jpg" alt="Liberty">
+	               	<img src="images/portfolio/liberty.jpg" alt="isromerch">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 		     					       <h3 class="folio-title">Liberty</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  Web Design
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
