--- a/index.html
+++ b/index.html
@@ -403,14 +403,14 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Liberty</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>isromerch</h4>		      
+					      <p>The website was designed as a shop for clothes with ISRO branding and involved the usage of HTML, CSS, Javascript and Jquery. I also used PHP to set up the login interface however used the help of Shopify to maintain the payments gateway.</p>
 
 					      <div class="categories">Web Development</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="http://www.isromerch.in">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -423,14 +423,11 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Shutterbug</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Chicspora</h4>		      
+					      <p>Was part of a 3 member team that designed a website for women's clothes. I used HTML, CSS and Javascript for the client side of the website.</p>
 
 					      <div class="categories">Web Design</div>			               
 					   </div>
-
-			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
