--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
 				   	<div class="progress percent75"><span>75%</span></div>
 				   	<strong>Wordpress</strong>
 				   </li>
+				   <li>
+
+				   	<div class="progress percent50"><span>50%</span></div>
+				   	<strong>Drupal</strong>
+				   </li>
       
 				</ul> <!-- /skill-bars -->		
 
