--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">I have worked on 3 projects so far involving HTML, CSS, Javascript and Jquery.</p>
+   			<p class="lead">I have worked on a few projects so far involving HTML, CSS, Javascript, Python and Jquery.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -234,13 +234,14 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Ecommerce Website </h3>
-	   					<p>July 2018 - Present</p>
+	   					<h3>Substance Abuse Awareness Website</h3>
+	   					<p>October 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>www.isromerch.in</h4>
-	   					<p>The website was designed as a shop for clothes with ISRO branding and involved the usage of HTML, CSS, Javascript and Jquery. I also used PHP to set up the login interface however used the help of Shopify to maintain the payments gateway.</p>
+	   					<h4>www.bmoresafe.online</h4>
+	   					Developed a website that has a game targeted to the youth that teaches them the dangers of substance abuse.
+						Programmed using RenJS to build the game and the website built with HTML and CSS and Javascript.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -252,13 +253,15 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>November 2017 - June 2018</p>
+	   					<h3>Backend developer – B</h3>
+	   					<p>September 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Chicspora </h4>
-	   					<p>Was part of a 3 member team that designed a website for women's clothes. I used HTML, CSS and Javascript for the client side of the website.</p>
+	   					<h4>Bizclout </h4>
+	   					<p>Designed the back end of a web based service linking up various organizations to YouTube influencers. The website was able to take in information from organizations including location, type, and product in order to match with similar Youtube influencers.
+							Used Python for the backend and implemented Google Cloud Platform's Machine
+							Learning API to setup the brand to Youtube influencer matching algorithm.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -271,12 +274,12 @@
 
 	   				<div class="timeline-header">
 	   					<h3>App Developer</h3>
-	   					<p>May 2017 - June 2017</p>
+	   					<p>September 2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Algebraic Identities App</h4>
-	   					<p>Designed a basic android app using the Eclipse IDE with Java framework that displays algebraic identities and proofs along with examples. The app received 50+ downloads. </p>
+	   					<h4>Skan</h4>
+	   					<p>Designed a basic android app using the Android IDE with Java framework that displays areas prone to cyclones and nearest safe places using the NASA API for disaster.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
