--- a/index.html
+++ b/index.html
@@ -411,14 +411,14 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>isromerch</h4>		      
-					      <p>The website was designed as a shop for clothes with ISRO branding and involved the usage of HTML, CSS, Javascript and Jquery. I also used PHP to set up the login interface however used the help of Shopify to maintain the payments gateway.</p>
+					      <h4>bmoresafe</h4>		      
+					      <p>Website with a game targeting the youth that teaches them the dangers of substance abuse. Built the frontend of the website with HTML, CSS and Javascript.</p>
 
 					      <div class="categories">Web Development</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.isromerch.in">Details</a>
+			            <a href="http://bmoresafe.000webhostapp.com">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -431,8 +431,8 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Chicspora</h4>		      
-					      <p>Was part of a 3 member team that designed a website for women's clothes. I used HTML, CSS and Javascript for the client side of the website.</p>
+					      <h4>Bizclout</h4>		      
+					      <p>- Programmed the back end of a web based service linking up various organizations to YouTube influencers. Built with the Google Cloud Platform's Machine Learning API to setup the brand to the Youtube influencer matching algorithm.</p>
 
 					      <div class="categories">Web Design</div>			               
 					   </div>
